--- a/JS11/css/styles.css
+++ b/JS11/css/styles.css
@@ -7,7 +7,7 @@ li {
 }
 
 div {
-  width: 45vw;
+  width: 60vw;
   margin-left: auto;
   margin-right: auto;
   border-radius: 5px;
@@ -19,8 +19,8 @@ input {
   width: 40vw;
   display: flex;
   flex-direction: column;
-  padding: 12px;
-  border: 1px solid #ccc;
+  padding: 14px;
+  border: 1px solid #3dcfc2;
   margin-top: 6px;
   margin-bottom: 16px;
   margin-left: auto;
@@ -28,47 +28,14 @@ input {
 }
 
 button {
-  padding: 9px 18px;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
+  padding: 9px 18px;
   background-color: #3dcfc2;
   color: white;
   font-size: 20px;
   border: none;
   cursor: pointer;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
