--- a/JS11/css/styles.css
+++ b/JS11/css/styles.css
@@ -28,9 +28,10 @@ input {
 }
 
 button {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  margin-right: 10px;
   padding: 9px 18px;
   background-color: #3dcfc2;
   color: white;
@@ -38,4 +39,12 @@ button {
   border: none;
   cursor: pointer;
 }
+
+
+button:not(:first-child) {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
 
