--- a/JS11.2/css/styles.css
+++ b/JS11.2/css/styles.css
@@ -26,7 +26,8 @@ input:first-child {
 #contactList {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    color: red;
+    color: white;
+    text-shadow: 1px 1px 1px #000;
 }
 
 h2 {
